--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -14,8 +14,29 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  margin-top: -2rem;
 }
 
+.profile img {
+  box-sizing: initial;
+  height: 3rem;
+  border-radius: 8px;
+  border: 4px solid var(--grey-800);
+  outline: 2px solid var(--green-500);
+}
+
+.profile strong {
+  margin-top: 1rem;
+  color: var(--grey-100);
+  line-height: 1.6;
+}
+
+.profile span {
+  font-size: 0.875rem;
+  color: var(--grey-400);
+  line-height: 1.6;
+}
 .sidebar footer {
   border-top: 1px solid var(--grey-600);
   margin-top: 1.5rem;
@@ -24,7 +45,7 @@
 
 .sidebar footer a {
   background: transparent;
-  color: var(--grey-500);
+  color: var(--green-500);
   border: 1px solid var(--green-500);
   border-radius: 8px;
   height: 50px;
@@ -36,4 +57,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
+  gap: 0.75rem;
+
+  transition: color 0.1s, background-color 0.1s;
+}
+
+.sidebar footer a:hover {
+  background: var(--green-500);
+  color: var(--white);
 }
