--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -122,3 +122,7 @@ color: var(--grey-400)
 .commentForm button[type=submit]:hover {
     background: var(--green-300);
 }
+
+.commentList {
+    margin-top: 2rem;
+}
