--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -112,8 +112,13 @@ color: var(--grey-400)
 
 }
 
-.commentForm button[type=submit]:hover {
+.commentForm button[type=submit]:hover:not(:disabled):hover {
     background: var(--green-300);
+}
+
+.commentForm button:disabled {
+    opacity: 0.7;
+    cursor: not-allowed;
 }
 
 .commentList {
